--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+code {
+  background-color: beige;
+}
+
+section {
+    padding : 20px;
+    margin: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+section:hover {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -51,6 +69,3 @@
   max-width: 400px;
 }
 
-code {
-  background-color: beige;
-}
